--- a/src/components/movies.module.css
+++ b/src/components/movies.module.css
@@ -18,6 +18,21 @@
   max-width: 100vw;
 }
 
+.bookDashboard {
+  display: flex;
+  flex-direction: column;
+  background: rgba(0, 0, 0, 0.3);
+  color: white;
+  gap: 8px;
+  padding: 8px;
+  margin-bottom: 10px;
+  max-width: 100%;
+  /* overflow: scroll; */
+  overflow-x: hidden;
+  height: 100%;
+  max-width: 100vw;
+}
+
 .information {
   max-width: 100%;
   word-wrap: break-word;
