--- a/src/components/movies.module.css
+++ b/src/components/movies.module.css
@@ -12,10 +12,51 @@
   padding: 8px;
   margin-bottom: 10px;
   max-width: 100%;
-  overflow: scroll;
   overflow-x: hidden;
-  height: 100%;
-  max-width: 100vw;
+  height: 90vh;
+  max-width: 95vw;
+  border: 1px solid #ffffff;
+  scrollbar-color: #ffffff;
+}
+/* Customize the scrollbar container */
+::-webkit-scrollbar {
+  width: 12px; /* Set the width of the vertical scrollbar */
+}
+
+/* Customize the track (the background of the scrollbar) */
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+  border-radius: 10px;
+}
+
+/* Customize the thumb (the draggable part of the scrollbar) */
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px;
+  border: 3px solid #f1f1f1; /* Optional, adds a border around the thumb */
+}
+
+/* Customize the thumb on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+/* Disable Webkit scrollbar styling for mobile */
+@media (max-width: 767px) {
+  ::-webkit-scrollbar {
+    overflow: auto; /* Disable WebKit scrollbar styling */
+  }
+  .movieDashboard {
+    overflow: auto;
+  }
+}
+
+/* Optional: WebKit scrollbar styles for larger screens */
+@media (min-width: 768px) {
+  ::-webkit-scrollbar {
+    width: 12px;
+    overflow: scroll;
+  }
 }
 
 .bookDashboard {
@@ -27,7 +68,6 @@
   padding: 8px;
   margin-bottom: 10px;
   max-width: 100%;
-  /* overflow: scroll; */
   overflow-x: hidden;
   height: 100%;
   max-width: 100vw;
